add: hero section

--- a/src/ui/styles/_typo.scss
+++ b/src/ui/styles/_typo.scss
@@ -1,58 +1,68 @@
 .h {
-  font-family: 'Druk Wide Cyr';
-  font-weight: 500;
-  text-transform: uppercase;
+    font-family: 'Druk Wide Cyr';
+    font-weight: 500;
+    text-transform: uppercase;
 
-  &_1 {
-    font-size: 6rem;
-    line-height: 120%;
-    letter-spacing: 3%;
+    &_1 {
+        font-size: 6rem;
+        line-height: 120%;
+        letter-spacing: 0.15rem;
 
-    @media (max-width: 48em) {
-      font-size: 4.4rem;
+        @media (max-width: 48em) {
+            font-size: 4.4rem;
+            letter-spacing: 0.1rem;
+        }
     }
-  }
 
-  &_2 {
-    font-size: 5.2rem;
-    line-height: 130%;
-    letter-spacing: 2%;
+    &_2 {
+        font-size: 5.2rem;
+        line-height: 130%;
+        letter-spacing: 2%;
 
-    @media (max-width: 48em) {
-      font-size: 4rem;
+        @media (max-width: 48em) {
+            font-size: 4rem;
+        }
     }
-  }
 
-  &_3 {
-    font-size: 3.6rem;
-    line-height: 130%;
-    letter-spacing: 2%;
+    &_3 {
+        font-size: 3.6rem;
+        line-height: 130%;
+        letter-spacing: 2%;
 
-    @media (max-width: 48em) {
-      font-size: 3.6rem;
+        @media (max-width: 48em) {
+            font-size: 3.6rem;
+        }
     }
-  }
 }
 
 .subtitle {
-  font-family: Roboto;
-  font-weight: 500;
-  font-size: 2.4rem;
-  line-height: 140%;
+    font-family: Roboto;
+    font-weight: 500;
+    font-size: 2.4rem;
+    line-height: 140%;
 
-  @media (max-width: 48em) {
-    font-size: 3.6rem;
-  }
+    @media (max-width: 48em) {
+        font-size: 3.6rem;
+    }
 }
 
 .txt {
-  line-height: 140%;
+    line-height: 140%;
 
-  &_14 {
-    font-size: 1.4rem;
+    &_14 {
+        font-size: 1.4rem;
 
-    @media (max-width: 48em) {
-      font-size: 2.8rem;
+        @media (max-width: 48em) {
+            font-size: 2.8rem;
+        }
     }
-  }
+
+    &_caps {
+        font-size: 2rem;
+        text-transform: uppercase;
+
+        @media (max-width: 48em) {
+            font-size: 3.2rem;
+        }
+    }
 }
