--- a/src/ui/styles/_icon.scss
+++ b/src/ui/styles/_icon.scss
@@ -1,119 +1,123 @@
 .icon {
-  position: relative;
-  display: inline-flex;
-  align-items: center;
-  justify-content: center;
-  flex: 0 0 7rem;
-  width: 7rem;
-  height: 7rem;
-  border-radius: 50%;
-  box-shadow: inset 0 -0.16rem 0.8rem rgba(255, 168, 0, 0.48),
-    inset 0.32rem 0.32rem 0.16rem rgba(255, 255, 255, 0.1);
-  backdrop-filter: blur(0.5rem);
-  overflow: hidden;
+    position: relative;
+    display: inline-flex;
+    align-items: center;
+    justify-content: center;
+    flex: 0 0 7rem;
+    width: 7rem;
+    height: 7rem;
+    border-radius: 50%;
+    box-shadow: inset 0 -0.16rem 0.8rem rgba(255, 168, 0, 0.48),
+        inset 0.32rem 0.32rem 0.16rem rgba(255, 255, 255, 0.1);
+    backdrop-filter: blur(0.5rem);
+    overflow: hidden;
 
-  &::before,
-  &::after {
-    content: '';
-    position: absolute;
-    bottom: 0;
-  }
-
-  &::before {
-    left: 50%;
-    height: 2.5rem;
-    width: 125%;
-    background-image: url(./assets/images/bg/btn-gradient.svg);
-    background-size: cover;
-    background-repeat: no-repeat;
-    transform: translateX(-50%);
-  }
-
-  &::after {
-    left: 0;
-    height: 100%;
-    width: 100%;
-    background: linear-gradient(64deg, #e35d1b 21.64%, #cd591f 69.31%);
-    opacity: 0;
-    backdrop-filter: blur(0.8rem);
-    transition: opacity 0.3s ease;
-  }
-
-  &_white {
-    box-shadow: inset 0 -0.16rem 0.8rem rgba(255, 255, 255, 0.48),
-      inset 0.32rem 0.32rem 0.16rem rgba(255, 255, 255, 0.1);
-
+    &::before,
     &::after {
-      background: linear-gradient(64deg, #ffffff 21.64%, #efefef 69.31%);
+        content: '';
+        position: absolute;
+        bottom: 0;
     }
 
     &::before {
-      background-image: url(./assets/images/bg/btn-gradient-white.svg);
-    }
-  }
-
-  &._is-disabled {
-    box-shadow: inset 0 -0.16rem 0.8rem rgba(173, 173, 173, 0.48),
-      inset 0.32rem 0.32rem 0.16rem rgba(255, 255, 255, 0.1);
-
-    svg path {
-      fill: $gray;
+        left: 50%;
+        height: 2.5rem;
+        width: 125%;
+        background-image: url(./assets/images/bg/btn-gradient.svg);
+        background-size: cover;
+        background-repeat: no-repeat;
+        transform: translateX(-50%);
     }
 
     &::after {
-      background: linear-gradient(64deg, #b5b5b5 21.64%, #818181 69.31%);
-    }
-    &::before {
-      background-image: url(./assets/images/bg/btn-gradient-white.svg);
-    }
-  }
-
-  svg {
-    width: 2rem;
-    height: 2rem;
-
-    path {
-      transition: fill 0.3s ease;
+        left: 0;
+        height: 100%;
+        width: 100%;
+        background: linear-gradient(180deg, rgb(255, 108, 0.5) 21.64%, rgb(255, 108, 1) 69.31%);
+        opacity: 0;
+        backdrop-filter: blur(0.8rem);
+        transition: opacity 0.3s ease;
     }
 
-    &:first-child {
-      position: relative;
-      z-index: 3;
-    }
+    &_white {
+        box-shadow: inset 0 -0.16rem 0.8rem rgba(255, 255, 255, 0.48),
+            inset 0.32rem 0.32rem 0.16rem rgba(255, 255, 255, 0.1);
 
-    &:last-child {
-      position: absolute;
-      z-index: 2;
-      top: 50%;
-      left: 50%;
-      filter: blur(0.2rem);
-      transform: translate(-50%, -50%);
-    }
-  }
-
-  @media (any-hover: hover) {
-    &:not(&._is-disabled, &_white) {
-      &:hover {
         &::after {
-          opacity: 1;
+            background: linear-gradient(
+                180deg,
+                rgba(255, 255, 255, 0.48) 21.64%,
+                rgba(255, 255, 255, 0.5) 69.31%
+            );
         }
-        svg path {
-          fill: $white;
-        }
-      }
-    }
-  }
 
-  @media (max-width: 48em) {
-    flex: 0 0 13rem;
-    width: 13rem;
-    height: 13rem;
-    box-shadow: inset 0 -0.48rem 2.4rem rgba(255, 168, 0, 0.48),
-      inset 0.96rem 0.96rem 0.48rem rgba(255, 255, 255, 0.1);
-    backdrop-filter: blur(1.4rem);
-    svg {
-      width: 5rem;
-      height: 5rem;
+        &::before {
+            background-image: url(./assets/images/bg/btn-gradient-white.svg);
+        }
     }
-  }
+
+    &._is-disabled {
+        box-shadow: inset 0 -0.16rem 0.8rem rgba(173, 173, 173, 0.48),
+            inset 0.32rem 0.32rem 0.16rem rgba(255, 255, 255, 0.1);
+
+        svg path {
+            fill: $gray;
+        }
+
+        &::after {
+            background: linear-gradient(64deg, #b5b5b5 21.64%, #818181 69.31%);
+        }
+        &::before {
+            background-image: url(./assets/images/bg/btn-gradient-white.svg);
+        }
+    }
+
+    svg {
+        width: 2rem;
+        height: 2rem;
+
+        path {
+            transition: fill 0.3s ease;
+        }
+
+        &:first-child {
+            position: relative;
+            z-index: 3;
+        }
+
+        &:last-child {
+            position: absolute;
+            z-index: 2;
+            top: 50%;
+            left: 50%;
+            filter: blur(0.2rem);
+            transform: translate(-50%, -50%);
+        }
+    }
+
+    @media (any-hover: hover) {
+        &:not(&._is-disabled) {
+            &:hover {
+                &::after {
+                    opacity: 1;
+                }
+                svg path {
+                    fill: $white;
+                }
+            }
+        }
+    }
+
+    @media (max-width: 48em) {
+        flex: 0 0 13rem;
+        width: 13rem;
+        height: 13rem;
+        box-shadow: inset 0 -0.48rem 2.4rem rgba(255, 168, 0, 0.48),
+            inset 0.96rem 0.96rem 0.48rem rgba(255, 255, 255, 0.1);
+        backdrop-filter: blur(1.4rem);
+        svg {
+            width: 5rem;
+            height: 5rem;
+        }
+    }
 }
