--- a/src/scss/fonts.scss
+++ b/src/scss/fonts.scss
@@ -1,17 +1,17 @@
 @font-face {
-  font-family: 'Druk Wide Cyr';
-  font-weight: 500;
-  src: url('./assets/fonts/DrukWideCyr_medium.woff2') format('woff2');
+    font-family: 'Druk Wide Cyr';
+    font-weight: 500;
+    src: url('../assets/fonts/drukwidecyr-medium.woff2') format('woff2');
 }
 
 @font-face {
-  font-family: 'Gilroy';
-  font-weight: 700;
-  src: url('./assets/fonts/Gilroy_bold.woff2') format('woff2');
+    font-family: 'Gilroy';
+    font-weight: 700;
+    src: url('../assets/fonts/Gilroy_bold.woff2') format('woff2');
 }
 
 @font-face {
-  font-family: 'Druk Text Wide Cyr';
-  font-weight: 500;
-  src: url('./assets/fonts/DrukTextWideCyr_medium.woff2') format('woff2');
+    font-family: 'Druk Text Wide Cyr';
+    font-weight: 500;
+    src: url('../assets/fonts/DrukTextWideCyr_medium.woff2') format('woff2');
 }
