--- a/src/ui/styles/_button.scss
+++ b/src/ui/styles/_button.scss
@@ -1,100 +1,91 @@
 .btn {
-  margin: 2rem;
-  position: relative;
-  padding: 2rem 4rem;
-  display: inline-flex;
-  align-items: center;
-  justify-content: center;
-  border-radius: 0.8rem;
-  background: radial-gradient(
-    55.63% 191.15% at 60.94% 0%,
-    rgba(254, 254, 254, 0.7) 0%,
-    rgba(255, 255, 255, 0) 100%
-  );
-  color: $white;
-  overflow: hidden;
-
-  &::before,
-  &::after {
-    content: '';
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    width: calc(100% - 2px);
-    height: calc(100% - 2px);
+    position: relative;
+    padding: 2rem 4rem;
+    display: inline-flex;
+    align-items: center;
+    justify-content: center;
     border-radius: 0.8rem;
-    box-shadow: 0 0.6rem 1.5rem rgba(0, 0, 0, 0.25);
-    transform: translate(-50%, -50%);
-  }
-  &::before {
     background: radial-gradient(
-        54% 100% at 50% 0%,
-        rgba(255, 255, 255, 0.3) 0%,
-        rgba(0, 0, 0, 0) 100%
-      ),
-      linear-gradient(180deg, #ff6c01 0%, #b34f06 100%);
-  }
-  &::after {
-    opacity: 0;
-    background: radial-gradient(
-        54% 100% at 50% 0%,
-        rgba(255, 255, 255, 0.48) 0%,
-        rgba(0, 0, 0, 0) 100%
-      ),
-      linear-gradient(180deg, #dc5e01 0%, #ae4a01 100%);
-    transition: opacity 0.3s ease;
-  }
-
-  &._is-disabled {
-    &::before {
-      background: radial-gradient(
-          54% 100% at 50% 0%,
-          rgba(255, 255, 255, 0.3) 0%,
-          rgba(0, 0, 0, 0) 100%
-        ),
-        linear-gradient(180deg, #b0b0b0 0%, #6c6c6c 100%);
-    }
-    &::after {
-      content: none;
-    }
-
-    .btn__txt {
-      color: $gray;
-    }
-  }
-
-  @media (any-hover: hover) {
-    &:not(&._is-disabled) {
-      &:hover {
-        &::after {
-          opacity: 1;
-        }
-      }
-    }
-  }
-
-  @media (max-width: 48em) {
-    padding: 4rem 8rem;
-    border-radius: 1.6rem;
+        55.63% 191.15% at 60.94% 0%,
+        rgba(254, 254, 254, 0.7) 0%,
+        rgba(255, 255, 255, 0) 100%
+    );
+    color: $white;
+    overflow: hidden;
 
     &::before,
     &::after {
-      border-radius: 1.6rem;
+        content: '';
+        position: absolute;
+        top: 50%;
+        left: 50%;
+        width: calc(100% - 2px);
+        height: calc(100% - 2px);
+        border-radius: 0.8rem;
+        box-shadow: 0 0.6rem 1.5rem rgba(0, 0, 0, 0.25);
+        transform: translate(-50%, -50%);
     }
-  }
+    &::before {
+        background: radial-gradient(54% 100% at 50% 0%, rgba(255, 255, 255, 0.3) 0%, rgba(0, 0, 0, 0) 100%),
+            linear-gradient(180deg, #ff6c01 0%, #b34f06 100%);
+    }
+    &::after {
+        opacity: 0;
+        background: radial-gradient(54% 100% at 50% 0%, rgba(255, 255, 255, 0.48) 0%, rgba(0, 0, 0, 0) 100%),
+            linear-gradient(180deg, #dc5e01 0%, #ae4a01 100%);
+        transition: opacity 0.3s ease;
+    }
 
-  // .btn__txt
+    &._is-disabled {
+        &::before {
+            background: radial-gradient(
+                    54% 100% at 50% 0%,
+                    rgba(255, 255, 255, 0.3) 0%,
+                    rgba(0, 0, 0, 0) 100%
+                ),
+                linear-gradient(180deg, #b0b0b0 0%, #6c6c6c 100%);
+        }
+        &::after {
+            content: none;
+        }
 
-  &__txt {
-    position: relative;
-    z-index: 2;
-    font-weight: 500;
-    line-height: 110%;
-    text-transform: uppercase;
+        .btn__txt {
+            color: $gray;
+        }
+    }
+
+    @media (any-hover: hover) {
+        &:not(&._is-disabled) {
+            &:hover {
+                &::after {
+                    opacity: 1;
+                }
+            }
+        }
+    }
 
     @media (max-width: 48em) {
-      font-size: 3.6rem;
-      line-height: 4rem;
+        padding: 4rem 8rem;
+        border-radius: 1.6rem;
+
+        &::before,
+        &::after {
+            border-radius: 1.6rem;
+        }
     }
-  }
+
+    // .btn__txt
+
+    &__txt {
+        position: relative;
+        z-index: 2;
+        font-weight: 500;
+        line-height: 110%;
+        text-transform: uppercase;
+
+        @media (max-width: 48em) {
+            font-size: 3.6rem;
+            line-height: 4rem;
+        }
+    }
 }
