add: choose section

--- a/src/components/_hero.html
+++ b/src/components/_hero.html
@@ -115,7 +115,5 @@
             alt=""
         />
     </div>
-    <div class="hero__mountains hero__mountains_back">
-        <img src="./assets/images/bg/mountains-back.webp" alt="" class="hero__mountains-image" />
-    </div>
+    <div class="hero__mountains hero__mountains_back"></div>
 </section>
