--- a/src/ui/styles/_icon.scss
+++ b/src/ui/styles/_icon.scss
@@ -96,7 +96,7 @@
     }
 
     @media (any-hover: hover) {
-        &:not(&._is-disabled) {
+        &:not(&._is-disabled, &._no-hover) {
             &:hover {
                 &::after {
                     opacity: 1;
@@ -112,9 +112,16 @@
         flex: 0 0 13rem;
         width: 13rem;
         height: 13rem;
+
         box-shadow: inset 0 -0.48rem 2.4rem rgba(255, 168, 0, 0.48),
             inset 0.96rem 0.96rem 0.48rem rgba(255, 255, 255, 0.1);
         backdrop-filter: blur(1.4rem);
+
+        &_white {
+            box-shadow: inset 0 -0.48rem 2.4rem rgba(255, 255, 255, 0.48),
+                inset 0.96rem 0.96rem 0.48rem rgba(255, 255, 255, 0.1);
+        }
+
         svg {
             width: 5rem;
             height: 5rem;
