--- a/src/components/_hero.html
+++ b/src/components/_hero.html
@@ -2,7 +2,7 @@
     <div class="hero__content hero__content_back">
         <div class="hero__container container">
             <span class="hero__heading-txt txt txt_caps">LIGHT RENTAL CARS</span>
-            <span class="hero__heading h h_1"><span>Автопрокат</span> в южно-сахалинске</span>
+            <span class="hero__heading h h_1"><span>Автопрокат light</span> в южно-сахалинске</span>
             <span class="hero__subtitle subtitle">Лучшие предложения по аренде специально для вас!</span>
         </div>
     </div>
