--- a/src/components/_hero.html
+++ b/src/components/_hero.html
@@ -2,7 +2,7 @@
     <div class="hero__content hero__content_back">
         <div class="hero__container container">
             <span class="hero__heading-txt txt txt_caps">LIGHT RENTAL CARS</span>
-            <span class="hero__heading h h_1"><span>Автопрокат light</span> в южно-сахалинске</span>
+            <span class="hero__heading h h_1"><span>Автопрокат</span> в южно-сахалинске</span>
             <span class="hero__subtitle subtitle">Лучшие предложения по аренде специально для вас!</span>
         </div>
     </div>
@@ -69,7 +69,7 @@
             <div class="hero__car">
                 <img src="./assets/images/cars/9D257AFE-02FB.webp" alt="" class="hero__car-image" />
             </div>
-            <button type="button" class="hero__anchor icon icon_white">
+            <button data-scroll-to=".choose" type="button" class="hero__anchor icon icon_white">
                 <svg
                     width="22"
                     height="22"
