--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -74,6 +74,10 @@ section {
 // ui
 @import '../ui/styles/ui.scss';
 
+// ---------------------------------- libs ----------------------------------
+
+@import './libs/locomotive-scroll';
+
 // --------------------------------------------------------------------------
 
 @import './dev/vzmsk1.scss';
