--- a/src/scss/sections/_hero.scss
+++ b/src/scss/sections/_hero.scss
@@ -1,6 +1,6 @@
 .hero {
     position: relative;
-    margin-bottom: 11.5rem;
+    margin-bottom: 12.5rem;
     min-height: 110.6rem;
     overflow: hidden;
 
@@ -13,10 +13,7 @@
 
     &__content {
         position: relative;
-        bottom: -100%;
-        opacity: 0;
-        visibility: hidden;
-        transform: translateY(100%);
+        bottom: 0;
 
         // .hero__content_front
 
@@ -25,7 +22,7 @@
 
             @media (min-width: 48em) {
                 .hero__container {
-                    grid-template: 51.2rem / 3fr 6fr 3fr;
+                    grid-template: 51rem / 3fr 6fr 3fr;
                     align-items: flex-end;
                 }
             }
@@ -139,7 +136,6 @@
 
     &__car-image {
         object-fit: contain;
-        transform: scale(0);
     }
 
     // .hero__anchor
@@ -162,11 +158,10 @@
 
         &_front {
             z-index: 5;
-            bottom: -4rem;
-            left: -17.6rem;
-            width: 117%;
-            height: 93%;
-            transform: translateY(-100%);
+            bottom: -1rem;
+            left: -8rem;
+            width: 103%;
+            height: 92%;
 
             @media (max-width: 48em) {
                 bottom: 0;
@@ -180,14 +175,24 @@
 
         &_back {
             top: 0;
-            width: 100%;
+            left: -2rem;
+            width: 102%;
             height: 93%;
             background-image: url(./assets/images/bg/mountains-back.webp);
             background-size: cover;
             background-repeat: no-repeat;
             background-attachment: fixed;
             background-position: 0 -29rem;
-            clip-path: polygon(0 0, 100% 0%, 100% 0, 0 0);
+
+            &::after {
+                content: '';
+                position: absolute;
+                top: 0;
+                left: 0;
+                width: 100%;
+                height: 100%;
+                background-color: rgba(0, 0, 0, 0.2);
+            }
 
             @media (max-width: 48em) {
                 background-position: -40rem -16rem;
