--- a/src/ui/styles/_sl-pagination.scss
+++ b/src/ui/styles/_sl-pagination.scss
@@ -1,7 +1,7 @@
 .sl-pagination {
     display: flex;
     flex-direction: column;
-    row-gap: 2.4rem;
+    gap: 2.4rem;
 
     .swiper-pagination-bullet {
         display: flex;
@@ -11,7 +11,6 @@
         height: 0.2rem;
         background-color: $white;
         transition: transform 0.3s ease, background-color 0.3s ease;
-        cursor: pointer;
         &::after {
             content: attr(data-index);
             transform: translateX(calc(100% + 1rem)) scale(0);
@@ -25,6 +24,28 @@
 
             &::after {
                 transform: translateX(calc(100% + 1rem)) scale(1);
+            }
+        }
+    }
+
+    &_mm {
+        @media (max-width: 48em) {
+            flex-direction: row;
+
+            .swiper-pagination-bullet {
+                flex: 0 0 1.6rem;
+                width: 1.6rem;
+                height: 1.6rem;
+                border-radius: 50%;
+                background-color: rgba(56, 58, 61, 1);
+
+                &.swiper-pagination-bullet-active {
+                    transform: none;
+                }
+
+                &::after {
+                    content: none;
+                }
             }
         }
     }
