add: banner section

--- a/src/scss/sections/_choose.scss
+++ b/src/scss/sections/_choose.scss
@@ -1,4 +1,8 @@
 .choose {
+    @media (max-width: 48em) {
+        margin-bottom: 29rem;
+    }
+
     // .choose__container
 
     &__container {
@@ -74,7 +78,7 @@
 
     &__carousel {
         position: relative;
-        margin-bottom: 8rem;
+        margin-bottom: 12.3rem;
         display: flex;
         flex-direction: column;
         min-width: 0;
@@ -174,6 +178,7 @@
                 right: 0;
                 height: 100%;
                 opacity: 0;
+                pointer-events: none;
                 transition: transform 0.7s ease, opacity 0.3s ease;
 
                 &:not(&.swiper-slide-prev, &.swiper-slide-active, &.swiper-slide-next) {
@@ -207,6 +212,7 @@
                     z-index: 2;
                     opacity: 1;
                     transform: scale(0.33) translate(199rem, 2rem);
+                    pointer-events: all;
                     cursor: pointer;
 
                     &:not(._prev-slide &) {
@@ -332,12 +338,8 @@
         transform: translateY(-0.4rem);
 
         @media (max-width: 48em) {
-            padding: 3rem 8rem;
             align-self: stretch;
             width: 100%;
-            .btn__txt {
-                font-size: 3rem;
-            }
         }
     }
 
@@ -346,6 +348,7 @@
     &__heading {
         font-size: 4.8rem;
         line-height: 120%;
+        user-select: none;
 
         @media (min-width: 48em) {
             font-size: 7rem;
