--- a/src/components/svg.html
+++ b/src/components/svg.html
@@ -1,7 +1,9 @@
-<div
-  style="
-    position: absolute;
-    top: 0;
-    left: 0;
-    transform: translate(-100%, -100%);
-  "></div>
+<div style="position: absolute; top: 0; left: 0; transform: translate(-100%, -100%)">
+    <svg xmlns="http://www.w3.org/2000/svg" width="300%" height="300%">
+        <linearGradient id="speedometerProgressGradient" x1="42%" y1="0%" x2="58%" y2="100%">
+            <stop offset="0%" style="stop-color: rgb(255, 108, 1); stop-opacity: 1" />
+            <stop offset="45%" style="stop-color: rgb(255, 108, 1); stop-opacity: 0" />
+            <stop offset="100%" style="stop-color: rgb(212, 59, 101); stop-opacity: 1" />
+        </linearGradient>
+    </svg>
+</div>
