--- a/src/scss/sections/_choose.scss
+++ b/src/scss/sections/_choose.scss
@@ -61,6 +61,12 @@
             row-gap: 4.6rem;
             transform: none;
         }
+
+        @media (min-width: 48em) {
+            .info-item__subtitle {
+                max-width: 21.6rem;
+            }
+        }
     }
 
     // .choose__info-item
